SA padding spacing on to fix connect page

--- a/client/src/components/PageContent/Challenges/ChallengePage.css
+++ b/client/src/components/PageContent/Challenges/ChallengePage.css
@@ -86,7 +86,7 @@ body {
 .flex-parent {
   display: flex;
   justify-content: space-between;
-  padding: 0px 30px;
+  padding: 0px 20px;
 }
 
 @media only screen and (max-width: 802px) {
